frontend/test-app/style.css
@font-face {
    font-family: mainFont;
    src: url(../fonts/Comfortaa/Comfortaa-VariableFont_wght.ttf);
    margin: 0;
    padding: 0;
    font-weight: bold;
}

:root{
    /* --dark-main-color: rgb(143, 163, 89);
    --light-main-color: rgb(168, 168, 168);
    --medium-main-color: rgb(184, 115, 51); */
    --dark-main-color: rgb(0, 46, 130);
    --dark-secondary-color: rgb(0, 46, 130);
    --light-main-color: rgb(212, 217, 227);
    --light-blue: rgb(189, 202, 225);
    --medium-main-color: rgb(189, 202, 225);
    --dark-text: black;
    --light-text: white;
}

body{
    margin: 0;
    padding: 0;
    font-family: mainFont, Verdana;
}
*{
    font-family: mainFont, Verdana;
    font-size: 18px;
    margin: 0;
    padding: 0;
}
#navbar{
    /* position: ; */
    top:0;
    width: 100%;
    height: 60px;
    background-color: var(--dark-main-color);
}
#editor{
    display: grid;
    grid-template-columns: 1fr 1fr 250px;
    grid-template-rows: 1fr 60px 200px;
    /* gap: 5px; */
    height: calc(100vh - 60px);
    grid-template-areas: 
    'code-editor board object-panel'
    'code-editor puzzle-settings object-panel'
    'code-editor object-settings object-panel';
    margin: 0;
    padding: 0;
}
.grid-item{
    background-color: var(--light-main-color);
    /* margin: 5px; */
    border: 1px solid black;
}
.grid-puzzle-settings{
    grid-area: puzzle-settings;
    background-color: var(--dark-secondary-color);
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    align-content: center;
    align-items: center;
}
.grid-code-editor{
    grid-area: code-editor;
}
.grid-board{
    grid-area: board;
}
.grid-object-settings{
    grid-area: object-settings;
    background-color: var(--light-main-color);
    display: flex;
    justify-content: space-between;
}
.grid-object-panel{
    grid-area: object-panel;
    background-color: var(--light-main-color);
    /* overflow-y: scroll; */
    user-select: none;
}

/* ========================= OBJECT PANEL ============================== */

.object-panel-controls{
    background-color: var(--dark-secondary-color);
    display: inline-flex;
    justify-content: space-around;
    width: 100%;
}

.object-table{
    width: 100%;
    border-collapse: collapse;
    
}
.object-table tr{
    cursor: pointer;
}
.object-table tr:hover{
    background-color: var(--medium-main-color);
}
.object-table td{
    min-width: 1em;
    padding-top: 0.2em;
    padding-bottom: 0.2em;
}
/* .object-table td img{
} */
.selected-object{
    background-color: white;
    color: black;
}

/* ============================ OBJECT SETTINGS ================================ */

.object-fields{
    min-width: 200px;
    padding: 0.4em;
}
.object-fields table{
    width: 100%;
    margin: 0;
    padding: 0;
}
.object-fields input{
    background-color: white;
    /* border: 1px black solid; */
    border: none;
    border-radius: 100px;
    padding-left: 0.5em;
    /* border: none; */
    /* outline: none; */
}

#direction-input-element{
    background-color: white;
    border-radius: 100px;width: 100%;
    /* border: 1px solid black; */
    border: none;
    padding-left: 0.5em;
}
/* .object-fields table input{
    
} */
.costume-preview{
    /* background-color: yellow; */
    width: 200px;
    height: 100%;
    cursor: pointer;
}
.costume-preview img {
    height: 100%;
}
.object-name-input{
    font-size: 1.2em;
    width: 100%;
    margin-bottom: 0.2em;
}

/* .object-fields select{
    background-color: transparent;
    border: none;
}  */

.costume-picker-window{
    position: fixed;
    top: 0;
    left: 0;
    background-color: rgba(0, 0, 0, 0.573);
    width: 100%;
    height: 100%;
    z-index: 200;
}
.costume-picker-panel{
    
    width: calc(100% - 20em);
    height: calc(100% - 10em);
    background-color: var(--light-main-color);
    color: var(--dark-text);
    margin: 5em 10em;
    display: flex;
    flex-direction: column;
}
.costume-picker-control-bar{
    /* width: 100%; */
    position: relative;
    display: flex;
    /* justify-content:space-between; */
    flex-direction: row;
    align-content: center;
    align-items: center;
    background-color: var(--dark-main-color);
    color: var(--light-text);
    font-size: 1.2em;
    /* height: fit-content; */
    /* flex: 1; */
}
.costume-picker-control-bar-item{
    flex: 1;
    /* height: 5em; */

    /* background-color: orange; */
    height: auto;
    text-align: center;
}

.costume-picker-close{
    text-align: right;
}
.costume-picker-label{
    text-align: left;
    margin-left: 1em;
}
.costume-picker-filter{
    background-color: var(--light-main-color);
    border: none;
    /* border: 1px --dark-main-color solid; */
    border-radius: 100px;
    font-size: 1em;
    padding-left: 0.5em;
}
.costume-picker-costume-container{
    overflow: scroll;
    /* height: 100%; */
    display: flex;
    flex-wrap: wrap;
    justify-content:space-evenly;
    flex: 1;
}
.costume-picker-costume-container img{
    height: 12em;
}
.costume-list-item{
    display: flex;
    flex-direction: column;
    text-align: center;
    cursor: pointer;
}
a{
    cursor: pointer;
}

.nonselect-element{
    text-align: center;
    margin-top: auto;
    margin-bottom: auto;
    width: 100%;
}

/*========================== CONTROL PANEL ============================*/
#control-panel-puzzle-name{
    color: white;
    font-size: 1.1em;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    display: block;
    width: 450px;
    margin-left: 0.5em;
}
.control-panel-controls{
    display: flex;
    flex-wrap: nowrap;
    word-wrap: none;
}

.puzzle-settings-container{
    display: flex;
    padding: 1em;
    height: 100%;
    overflow: hidden;
}
.puzzle-settings-fields{
    flex: 1;
}
.puzzle-settings-fields input{
    border-radius: 100px;
    border: none;
    padding-left: 0.5em;
}
.puzzle-settings-blocks{
    flex: 1;
}
.puzzle-settings-blocks div{
    height: 100%;
    overflow-y: scroll;
}
.puzzle-settings-blocks ul{
    margin-left: 2em;
    list-style: none;

}
.puzzle-settings-blocks li{
    display: list-item;

}
.puzzle-settings-blocks input, label{
    cursor: pointer;
    margin: 0.3em;

}
/* label{
    /* cursor: pointer; */
/* } */
/* ul ul{
    margin-left: 2em;
} */

